--- a/contact.html
+++ b/contact.html
@@ -87,9 +87,9 @@
    <script> 
        function sendEmail(){
        Email.send({
-    Host : "smtp.gmail.com",
+    Host : "smtp.elasticemail.com",
     Username : "maheshseeramsetti@gmail.com",
-    Password : "8106671012",
+    Password : "4EC662269BE5151F4BD89639A96B3FB30915",
     To : 'maheshseeramsetti@gmail.com',
     From :document.getElementById("customer-email").value,
     Subject : "New Contact form for "+ document.getElementById("service-type").value +"services",
