--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <link rel="stylesheet" href="css/resume.css" />
     <link rel="stylesheet" href="css/tutorials.css" />
     <link rel="stylesheet" href="css/gallery.css" />
+    
   </head>
-  <body>
+  <body id="body">
     <header class="header">
       <div class="header-left">
         <a href="index.html" class="logo">
@@ -37,6 +38,7 @@
       </div>
       <div class="header-end">
         <img class="hamburger" src="images/Hamburger.svg" alt="hamburger" />
+        <img class="pseudohamburger" src="images/Hamburger copy.svg" alt="pseudohamburger" />
       </div>
 
       <div class="header-right">
@@ -60,7 +62,7 @@
             <a class="About-us-button" href="#section2">About Me</a>
             <a class="Contact-us-button" href="contact.html">Contact Me</a>
           </div>
-        </div>`
+        </div>
       </section>
 
       <section id="section2">
@@ -204,3 +206,4 @@
     </footer>
   </body>
 </html>
+<script src="script/script.js"></script>
