--- a/resume.html
+++ b/resume.html
@@ -44,6 +44,7 @@
 
         <div class="header-end">
           <img class="hamburger" src="images/Hamburger.svg" alt="hamburger" >
+          <img class="pseudohamburger" src="images/Hamburger copy.svg" alt="pseudohamburger" />
         </div>
       </header>
       <main class="resume-main">
@@ -153,6 +154,8 @@
         <h1 id="experience-heading">Experience</h1>
         <div class="experience-block"><p>3D Metrology & Design Engineer at T3D Labs Pvt Ltd</p>
         <button class="experience-button">Mar-2019 to Oct-2022</button></div>
+        <div class="experience-block"><p>Assistant Manager in 3D Applications at 3D Monotech</p>
+          <button class="experience-button">Nov-2022 to Present</button></div>
         <br>
 
         </div>
@@ -205,3 +208,4 @@
       </footer>
     </body>
   </html>
+  <script src="script/script.js"></script>
