--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
 
           <div class="header-end">
             <img class="hamburger" src="images/Hamburger.svg" alt="hamburger">
+            <img class="pseudohamburger" src="images/Hamburger copy.svg" alt="pseudohamburger" />
           </div>
         </header>
 
@@ -206,3 +207,4 @@
     </div>
   </footer>
       </body>
+      <script src="script/script.js"></script>
