--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,7 @@
 
         <div class="header-end">
           <img class="hamburger" src="images/Hamburger.svg" alt="hamburger">
+          <img class="pseudohamburger" src="images/Hamburger copy.svg" alt="pseudohamburger" />
         </div>
       </header>
 
@@ -56,3 +57,4 @@
   </footer>
     </body>
   </html>
+  <script src="script/script.js"></script>
