--- a/tutorials.html
+++ b/tutorials.html
@@ -46,6 +46,7 @@
 
           <div class="header-end">
             <img class="hamburger" src="images/Hamburger.svg" alt="hamburger">
+            <img class="pseudohamburger" src="images/Hamburger copy.svg" alt="pseudohamburger" />
           </div>
         </header>
 
@@ -59,3 +60,4 @@
         
       </body>
     </html>
+    <script src="script/script.js"></script>
