--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
           Host : "smtp.elasticemail.com",
     Username : "maheshseeramsetti@gmail.com",
     Password : "4EC662269BE5151F4BD89639A96B3FB30915",
-      To : 'maheshsetti6@gmail.com',
+      To : 'maheshseeramsetti@gmail.com',
       From :'maheshseeramsetti@gmail.com',
       Subject : "New Contact form for "+ document.getElementById("service-type").value +"services",
       Body : "Name: "+document.getElementById("customer-name").value 
