--- a/contact.html
+++ b/contact.html
@@ -203,7 +203,7 @@
              +"<br> Subject: "+document.getElementById("subject").value 
              +"<br> Message: "+document.getElementById("message").value 
   }).then(
-    message => alert(message)
+    message => alert("Thanks for contacting us, We will reach out to you shortly")
          );
          }
           </script> 
