--- a/index.html
+++ b/index.html
@@ -81,20 +81,19 @@
           /><div></div><div></div><div></div><div></div></figure>
           <ul class="section2-content">
             <li>
-              Currently working as an Operations manager in Product development
-              and 3D Scanning for the past 6 months with Two and half years
-              experience as a 3D Metrology Engineer at Think 3D Pvt Ltd.
+              Currently working as an Assistant Manager in 3D Scanning Applications for the past 1 year with a total of 5years
+              experience as a 3D Metrology Engineer.
             </li>
             <li>
               Looking for opportunities in R&D in Product Development in
               Advanced technologies.
             </li>
             <li>
-              Organising the work process and Assigning tasks to my operations
-              team and also guide team when necessary
+              Organizing the work process and Assigning tasks to my operations
+              team and also guide the team when necessary
             </li>
             <li>
-              Serve as the first point of contact with the clients ,assisting
+              Serve as the first point of contact with the clients, assisting
               them with their technical queries and work status.
             </li>
             <li>Gate 2019 Qualified with 93 Percentile.</li>
