--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,14 @@
               <div class="imageDetails"><p>Scan Time:1Hr</p><p> RE Time:4Hrs</p></div>
             </div>
           </div>
-            
+
+           <div class="image_panel"><img class="d_model" src="images/cad (33).gif" alt="cad_model">
+          <p class="imageTitle">Ceiling Multi Split AC</p><div class="image_panel_Expand">
+            <img class="d_model_expand" src="images/cad (10).gif" alt="cad_model_expand">
+            <p class="imageTitleExpand">Power Window pulley</p>
+            <p class="imageContent">This Model was reverse engineered using Hexagon Arm 3d Scanner and Geomagic Design X Software</p>
+            <div class="imageDetails"><p>Scan Time:40Hrs</p><p> RE Time:150Hrs</p></div>
+          </div></div>
           
           <div class="image_panel"><img class="d_model" src="images/cad (14).gif" alt="cad_model">
             <p class="imageTitle">Gun Stock</p>
