--- a/resume.html
+++ b/resume.html
@@ -155,7 +155,11 @@
         <div class="experience-block"><p>3D Metrology & Design Engineer at T3D Labs Pvt Ltd</p>
         <button class="experience-button">Mar-2019 to Oct-2022</button></div>
         <div class="experience-block"><p>Assistant Manager in 3D Applications at 3D Monotech</p>
-          <button class="experience-button">Nov-2022 to Present</button></div>
+          <button class="experience-button">Nov-2022 to March-2024</button></div>
+          <div class="experience-block"><p>Senior Design Engineer at Vertex Engineering Systems</p>
+          <button class="experience-button">April-2024 to May-2024</button></div>
+          <div class="experience-block"><p>Reverse Engineer at Immensa Technology labs</p>
+          <button class="experience-button">July 2024 to Present</button></div>
         <br>
 
         </div>
