--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
           /><div></div><div></div><div></div><div></div></figure>
           <ul class="section2-content">
             <li>
-              Currently working as an Assistant Manager in 3D Scanning Applications for the past 1 year with a total of 5years
-              experience as a 3D Metrology Engineer.
+              Currently working as a Mechanical Design Engineer with 5+ years experience in CAD Modelling,2D Drafting, Reverse Engineering & 3D Scanning Applications
             </li>
             <li>
               Looking for opportunities in R&D in Product Development in
               Advanced technologies.
             </li>
             <li>
-              Organizing the work process and Assigning tasks to my operations
+              Organizing the work process and assigning tasks to my operations
               team and also guide the team when necessary
             </li>
             <li>
@@ -98,7 +97,7 @@
             </li>
             <li>Gate 2019 Qualified with 93 Percentile.</li>
             <li>
-              Troubleshooting issues if any and implementing necessary
+              Troubleshooting issues, if any and implementing necessary
               strategies to resolve them
             </li>
             <li>
